visibility and parallax fixes

--- a/css/main.css
+++ b/css/main.css
@@ -26,12 +26,12 @@ body {
   background-size: cover;
 }
 .rectclass1 {
-  top: 150px;
+  top: 1400px;
   left: 0;
   z-index: -1;
 }
 .rectclass2 {
-  top: 0;
+  top: 600px;
   right: 0;
   z-index: -2;
 }
@@ -47,13 +47,14 @@ body {
 }
 
 
-.header{  
+.header{
+  background-color: rgba(235, 243, 243, 0.4);
   position: fixed;
   display: flex;
   top: -10px;
   height: 50px;
   width: 400px;
-  font-size: 16px;
+  font-size: 1rem;
   align-items: center;
   justify-content: center;
   left: 50%;
@@ -64,7 +65,6 @@ body {
   transition: visibility 0s, opacity 0.5s linear;
 }
 .header p {
-  backdrop-filter: blur(10px);
   padding-left: 50px;
   padding-right: 50px;
   transition: all 0.5s;
@@ -79,6 +79,7 @@ body {
   justify-content:center;
 }
 .title h1 {
+  background-color: rgba(235, 243, 243, 0.4);
   overflow:hidden;
   backdrop-filter: blur(10px);
   box-shadow: 0.5px 0.5px 10px 1px rgba(58, 56, 44, 0.5);
@@ -90,7 +91,6 @@ body {
 .infoscreen {
     font-size: 1rem;
     text-align: center;
-    
 }
 
 .infoscreen h2{
@@ -117,6 +117,7 @@ body {
   margin-left: 20%;
   margin-right: 20%;
   transition: all 0.5s;
+  background-color: rgba(235, 243, 243, 0.4);
 }
 
 
@@ -141,21 +142,17 @@ body {
   visibility:hidden;
 }
 
-.header p:hover, .title h1:hover {
-    color: rgba(124, 115, 97, 0.89);
+.header p:hover, .title h2:hover{
+    color: rgba(124, 115, 97, 0.9);
     text-shadow: 0px 0px 40px rgba(233, 233, 238, 7.5);
 }
 
-.infotext:hover {
-  color: rgba(58, 51, 51, 0.89);
+.infotext:hover, .infoscreen h2:hover, .title h1:hover {
+  color: rgba(58, 51, 51, 0.9);
   text-shadow: 0px 0px 30px rgba(233, 233, 238, 7.5);
-  background-color: rgba(106, 116, 116, 0.4);
-}
+  background-color: rgba(255, 255, 255, 0.7);
+  box-shadow: 0.5px 0.5px 25px 1px rgba(58, 56, 44, 0.5);
 
-.infoscreen h2:hover {
-  color: rgba(102, 91, 91, 0.89);
-  text-shadow: 0px 0px 30px rgba(233, 233, 238, 7.5);
-  background-color: rgba(162, 177, 177, 0.4);
 }
 
 .infotextimg:hover, .infotext img:hover {
@@ -177,7 +174,6 @@ body {
     padding: 225px;
     border-radius: 0px;
     position: relative;
-   
     text-shadow: 0px 0px 20px rgba(233, 233, 238, 7.5);
   }
 }
